--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* Me gusta el diseño del nav bar, aunque sería mejor que siempre estuviera ahí.*/
 .navbar .navbar-brand,
 .navbar .collapse .navbar-nav .nav-link {
     color: white;
