--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* Me gusta que los nombres son dicientes y se puede inferir lo que se dice*/
 .navbar .navbar-brand,
 .navbar .collapse .navbar-nav .nav-link {
     color: white;
